included the plone.behavior meta.zcml file, so that we get access to the <plone:behavior /> ZCML directive.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,5 +4,8 @@ Changelog
  (unreleased)
 ------------------
 
+- included the plone.behavior meta.zcml file,
+  so that we get access to the <plone:behavior /> ZCML directive.
+  [bogdangi]
 - work with plone:master p.a.portlets  
   [tmog]
